--- a/app/src/main/res/layout-land/activity_weather.xml
+++ b/app/src/main/res/layout-land/activity_weather.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraintLayoutWeather"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -18,10 +19,10 @@
         android:fontFamily="sans-serif-black"
         app:layout_constraintBottom_toTopOf="@+id/temperatureTextView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.301"
+        app:layout_constraintHorizontal_bias="0.107"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.935" />
+        app:layout_constraintVertical_bias="0.849" />
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/temperatureTextView"
@@ -31,12 +32,12 @@
         android:textColor="@android:color/white"
         android:textSize="60sp"
         android:fontFamily="sans-serif-black"
-        app:layout_constraintBottom_toTopOf="@+id/cardViewHumidity"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.192"
+        app:layout_constraintHorizontal_bias="0.09"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.8" />
+        app:layout_constraintVertical_bias="0.63" />
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cardViewHumidity"
@@ -45,10 +46,10 @@
         app:cardBackgroundColor="@color/kingBlue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
+        app:layout_constraintHorizontal_bias="0.889"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.709">
+        app:layout_constraintVertical_bias="0.679">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,9 +63,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:text="00°C "
-                android:fontFamily="sans-serif-black"
                 android:textColor="@android:color/white"
-                android:textSize="50sp" />
+                android:textSize="50sp"
+                android:fontFamily="sans-serif-black"/>
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/feelsLikeTextViewLabel"
