IDE recommended modifications

--- a/app/src/main/res/layout/activity_weather.xml
+++ b/app/src/main/res/layout/activity_weather.xml
@@ -61,7 +61,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
-                android:text="00°C "
+                android:text="@string/_00_c"
                 android:fontFamily="sans-serif-black"
                 android:textColor="@android:color/white"
                 android:textSize="50sp" />
